Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2990

Failure on sanity test_24v: error in listing large dir

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • server and client: lustre-master build# 1328 RHEL6
      fstype is zfs
    • 3
    • 7284

    Description

      https://maloo.whamcloud.com/test_sessions/a84605f2-90c2-11e2-8311-52540035b04c

      client console:

      Lustre: DEBUG MARKER: == sanity test 24v: list directory with large files (handle hash collision, bug: 17560) == 10:15:47 (1363713347)
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc stop
      Lustre: DEBUG MARKER: sanity test_24v: @@@@@@ FAIL: error in listing large dir
      Lustre: 8261:0:(dir.c:463:ll_get_dir_page()) Page-wide hash collision: 5723140463788032
      LustreError: 8261:0:(dir.c:594:ll_dir_read()) error reading dir [0x200000400:0x4:0x0] at 5723140463788032: rc -5
      Lustre: 8261:0:(dir.c:463:ll_get_dir_page()) Page-wide hash collision: 5723140463788032
      LustreError: 8261:0:(dir.c:594:ll_dir_read()) error reading dir [0x200000400:0x4:0x0] at 5723140463788032: rc -5
      

      Attachments

        1. debug
          0.2 kB
        2. trace
          307 kB

        Issue Links

          Activity

            People

              yong.fan nasf (Inactive)
              sarah Sarah Liu
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: